Convert to new sbt-chisel-dep plugin